fixed small screen overlap answers div

--- a/src/components/Answer/Answer.css
+++ b/src/components/Answer/Answer.css
@@ -28,7 +28,12 @@
 }
 @media (max-width: 1600px) {
   .fullExercise{
-    font-size: 1.8vw;
+    font-size: 1.3vw;
+  }
+}
+@media (max-width: 1200px) {
+  .fullExercise{
+    font-size: 1.5vw;
   }
 }
 @media (max-width:800px) {
