--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -26,6 +26,4 @@ font-style: normal;
 }
 .answers{
   padding-top: 5%;
-  margin-right: 40%;
-  margin-left: 40%;
 }
